--- a/AnotherWebProgFinals/WebLog.Master
+++ b/AnotherWebProgFinals/WebLog.Master
@@ -15,7 +15,8 @@
     <!--CSS-->
     <link href="/css/materialize.min.css" rel="stylesheet" media="screen,projection" />
     <link href="/css/style.min.css" rel="stylesheet" media="screen,projection" />
-    <link href="/css/style-fullscreen.css" rel="stylesheet" media="screen,projection" />
+    <link href="/css/page-center.css" rel="stylesheet" media="screen,projection" />
+    <!--<link href="/css/style-fullscreen.css" rel="stylesheet" media="screen,projection" />-->
     <link href="/css/perfect-scrollbar.css" rel="stylesheet" media="screen,projection" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
