--- a/AnotherWebProgFinals/WebAdminMaster.Master
+++ b/AnotherWebProgFinals/WebAdminMaster.Master
@@ -15,7 +15,7 @@
     <!--CSS-->
     <link href="/css/materialize.min.css" rel="stylesheet" media="screen,projection" />
     <link href="/css/style.min.css" rel="stylesheet" media="screen,projection" />
-    <link href="/css/style-fullscreen.css" rel="stylesheet" media="screen,projection" />
+    <link href="css/style-fullscreen.css" rel="stylesheet" />
     <link href="/css/perfect-scrollbar.css" rel="stylesheet" media="screen,projection" />
     <link href="/css/dropify.css" rel="stylesheet" media="screen, projection" />
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -26,7 +26,7 @@
         <header id="header" class="page-topbar">
             <!-- start header nav-->
             <div class="navbar-fixed">
-                <nav style="background:url(../images/headd.jpg)">
+                <nav style="background: url(../images/headd.jpg)">
                     <div class="nav-wrapper">
                         <ul class="left">
                             <li>
@@ -47,14 +47,14 @@
 
                 <!-- START LEFT SIDEBAR NAV-->
                 <aside id="left-sidebar-nav">
-                    <ul id="slide-out" class="side-nav leftside-navigation">
+                    <ul id="slide-out" class="side-nav fixed leftside-navigation">
                         <li class="user-details cyan darken-2">
-                            <div class="row" style="height:50%; padding-top:20%">
-                                <div class="col col s4 m4 l4" style="height:100px; padding-top:5%">
+                            <div class="row" style="height: 50%; padding-top: 20%">
+                                <div class="col col s4 m4 l4" style="height: 100px; padding-top: 5%">
                                     <img src="../images/avatar.jpg" alt="" class="circle responsive-img valign profile-image">
                                 </div>
                                 <div class="col col s8 m8 l8">
-                                    <ul id="profile-dropdown" class="dropdown-content" style="color:green">
+                                    <ul id="profile-dropdown" class="dropdown-content" style="color: green">
                                         <li><a href="#"><i class="mdi-action-face-unlock"></i>Profile</a>
                                         </li>
                                         <li><a href="#"><i class="mdi-action-settings"></i>Settings</a>
@@ -89,22 +89,26 @@
                         <li class="bold"><a href="directory_maintenance.aspx" class="waves-effect waves-cyan"><i class="mdi-maps-local-phone"></i>Directory</a></li>
                     </ul>
                     <a href="#" data-activates="slide-out" class="sidebar-collapse btn-floating btn-medium waves-effect waves-light green"><i class="mdi-navigation-menu"></i></a>
+
                 </aside>
                 <!-- END LEFT SIDEBAR NAV-->
             </div>
+
+            <section id="content">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </section>
         </div>
 
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        </asp:ContentPlaceHolder>
 
-        <footer class="page-footer" style="background:url(../images/headd.jpg)">
+        <footer class="page-footer" style="background: url(../images/headd.jpg)">
             <div class="container">
                 <div class="row">
-                    <div class="col l6 s12" style="padding-top:3%">
+                    <div class="col l6 s12" style="padding-top: 3%">
                         <h5 class="white-text"><strong>City of General Trias</strong></h5>
                         <p class="grey-text text-lighten-4">situated at the northern part of the province and is located 14°23′ latitude and 121°53′ longitude. The distance from the Provincial Capitol in Trece Martires City is 18.27 km.</p>
                     </div>
-                    <div class="col l3 s12" style="padding-top:1.5%">
+                    <div class="col l3 s12" style="padding-top: 1.5%">
                         <h5 class="white-text">Settings</h5>
                         <ul>
                             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -113,7 +117,7 @@
                             <li><a class="white-text" href="#!">Link 4</a></li>
                         </ul>
                     </div>
-                    <div class="col l3 s12" style="padding-top:1.5%">
+                    <div class="col l3 s12" style="padding-top: 1.5%">
                         <h5 class="white-text">Connect</h5>
                         <ul>
                             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -130,7 +134,6 @@
                 </div>
             </div>
         </footer>
-
         <script src="/js/jquery-1.11.2.min.js"></script>
         <script src="/js/materialize.min.js"></script>
         <script src="/js/perfect-scrollbar.min.js"></script>
